Tried to edit mobile glasses position again, after they shrunk a ton!  Apparently my issue was that, since desktop is using the "Go Live" preview, that allowed me to see it through that before commits and pushes are done, but going to the website through a browser instead of the Go Live extension doesn't show changes until committed.

--- a/responsive.css
+++ b/responsive.css
@@ -160,9 +160,10 @@
 /* Mobile-only glasses adjustment */
 @media (max-width: 900px) {
   .glasses {
-    top: 40%;
-    width: 210px;
-    height: 80px;
-    transform: translate(-50%, -50%) scale(0.18);
+    top: 42%;
+    left: 50%;
+    width: 230px;
+    height: 90px;
+    transform: translate(-50%, -50%) scale(0.24);
   }
 }
